  ``attribute_looks_like_numpy_member`` from ``astroid.brain.brain_numpy_utils``.

* Constants now have a parent of ``nodes.SYNTHETIC_ROOT``.

* Fix crashes with large positive and negative list multipliers.

  Closes #2521
  Closes #2523

* Fix precedence of `path` arg in `modpath_from_file_with_callback` to be higher than `sys.path`

* Improve consistency of ``JoinedStr`` inference by not raising ``InferenceError`` and
  returning either ``Uninferable`` or a fully resolved ``Const``.

  Closes #2621

* Fix crash when typing._alias() call is missing arguments.

  Closes #2513


What's New in astroid 3.3.9?
============================
Release date: TBA

* Fix inability to import `collections.abc` in python 3.13.1. The reported fixes in astroid 3.3.6
  and 3.3.7 did not actually fix this issue.

  Closes pylint-dev/pylint#10112



What's New in astroid 3.3.8?
============================
Release date: 2024-12-23

* Fix inability to import `collections.abc` in python 3.13.1. The reported fixes in astroid 3.3.6
  and 3.3.7 did not actually fix this issue.

  Closes pylint-dev/pylint#10112


What's New in astroid 3.3.7?
============================
Release date: 2024-12-20

This release was yanked.

* Fix inability to import `collections.abc` in python 3.13.1. The reported fix in astroid 3.3.6
  did not actually fix this issue.

  Closes pylint-dev/pylint#10112


What's New in astroid 3.3.6?
============================
Release date: 2024-12-08

* Fix inability to import `collections.abc` in python 3.13.1.
  _It was later found that this did not resolve the linked issue. It was fixed in astroid 3.3.7_

  Closes pylint-dev/pylint#10112

* Fix crash when typing._alias() call is missing arguments.

  Closes #2513


What's New in astroid 3.3.5?
============================
Release date: 2024-10-04

* Control setting local nodes outside of the supposed local's constructor.

  Closes #1490

* Fix Python 3.13 compatibility re: `collections.abc`
